docs: add ngram index option to search index listings

--- a/content/graphqlsearch/1.md
+++ b/content/graphqlsearch/1.md
@@ -27,6 +27,7 @@ For `String`, the following indexes are available:
 - `fulltext`: performs search-engine style matching; generates `alloftext` and
    `anyoftext`
 - `regexp`: matches regular expressions; generates the `regexp` filter input
+- `ngram`: matches substrings; generates the `match` filter input
 
 You specify multiple indexes as a list passed to the `by` argument of the
 `@search` directive.
