--- a/content/search/1.md
+++ b/content/search/1.md
@@ -23,6 +23,7 @@ For `string` the following indexes are available
 - `hash` as for `exact` but hashes string - useful with long strings
 - `fulltext` for full text search with `alloftext` and `anyoftext`
 - `trigram` for use with regular expressions
+- `ngram` for use with `match` — substring matching
 
 Specify multiple indexes as arguments to `@index`.
 
